# blitz

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  Cross.toml  HOWTO_WASM.md  PARLEY_ANALYSIS.md  PARLEY_VERTICAL_ALIGN_NOTE.md  README.md  justfile  position_plan.md  test.html  wpt.py
.claude/guides/: OBJC2_GUIDE.md  OBJC2_MIGRATION_GUIDE.md
.github/: android-ubuntu.sources
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  macos.yml  main.yml  publish-browser.yml  windows.yml  wpt.yml
apps/browser/: Cargo.toml  Dioxus.toml  MainActivity.kt  MainActivity.kt.hbs  TABS-PLAN.md
apps/browser/assets/: 404.html  about-history.css  about-newtab.css  about-stub.css  browser-dark.css  browser.css  error.html  start.html  view-source-dark.css  view-source-light.css  view-source.html
apps/browser/persistence/: Cargo.toml
apps/browser/persistence/src/: lib.rs
apps/browser/src/: about_pages.rs  browser.css  browser_history.rs  capture.rs  config.rs  document_loader.rs  favicon.rs  fps_overlay.rs  history.rs  history_store.rs  icons.rs  main.rs  nav.rs  status_bar.rs  tab.rs  tab_strip.rs  todomvc.css  toolbar.rs  url_suggestions.rs  util.rs
apps/browser/src/special_pages/: blitz_logo.b64  bookmarks.rs  history_page.rs  mod.rs  settings.rs  start.rs
apps/bump/: Cargo.toml
apps/readme/: Cargo.toml
apps/readme/assets/: blitz-markdown-overrides.css  github-markdown-light.css  github-markdown.css  syntax-highlight.css
apps/readme/examples/: gen_syntax_css.rs
apps/readme/src/: main.rs  markdown.rs  readme_application.rs
apps/readme/src/markdown/: comrak.rs  pulldown_cmark.rs
apps/wpt/: Cargo.toml
apps/wpt/src/: attr_test.rs  main.rs  net_provider.rs  panic_backtrace.rs  ref_test.rs  report.rs
apps/wpt/src/test_runners/: attr_test.rs  mod.rs
blitz-core/: Cargo.toml  README.md
blitz-core/examples/: counter.rs  grid.rs
blitz-core/src/: application.rs  events.rs  layout.rs  lib.rs  mouse.rs  render.rs  style.rs  util.rs
blitz-core/src/style/: background.rs  border.rs  foreground.rs  mod.rs
blitz-core/src/style/background/: linear_gradient.rs  mod.rs
blitz-core/src/text/: mod.rs
docs/: architecture.mmd
examples/: accessibility.rs  alistapart.rs  bare_style.rs  border.rs  box_shadow.rs  buttons.rs  click_test.rs  custom_widget.rs  demo.rs  dom_only.rs  driven.rs  driven_counter.rs  driven_grid.rs  flex.rs  flex_order.rs  form.rs  google.html  google.rs  gosub.rs  gradient.rs  hover.rs  html.rs  image.rs  inline.rs  inline_block.rs  inner_html.rs  interactive.rs  layout_debug.rs  list.rs  markdown.rs  multi_window.rs  outline.rs  parse_debug.rs  restyle.rs  rowspan.html  screenshot.rs  scroll.rs  servo.rs  svg.rs  tailwind.rs  (+8 more)
examples/anyrender/: Cargo.toml
examples/anyrender/src/: main.rs
examples/anyrender_bunnymark/: Cargo.toml
examples/anyrender_bunnymark/src/: bunny.rs  main.rs
examples/assets/: after_bug.html  animated_layout.html  animation.html  bbc.html  bbc_reduced.html  border-styles.html  border.html  bottom_only.html  clip-path.html  cursor.html  docsrs_header.html  filters.html  float-width.html  github-markdown-light.css  github_profile_reduced.html  github_profile_reduced2.html  github_profile_reduced3.html  google.html  gosub.html  gosub_reduced.html  graphite.html  graphite_blog_section.html  graphite_software_overview.html  guardian.html  hr.html  inline-flex-transform.html  input.html  kitchen_sink_test.html  nav_test.html  newservo.html  noscript.html  object_fit.html  positioning_test.html  pseudo.html  reddit-astral.html  servo-new-reduced-1.html  servo-new-reduced.html  servo-new.html  servo.css  servo.html  (+9 more)
examples/counter/: Cargo.toml  Dioxus.toml
examples/counter/src/: app.rs  lib.rs  main.rs
examples/google_bits/: google.html  (+2 more)
examples/seven_guis/: Cargo.toml  README.md  index.html
examples/seven_guis/src/: lib.rs  main.rs
examples/seven_guis/src/tasks/: cells.rs  crud.rs  flight_booker.rs  mod.rs
examples/todomvc/: Cargo.toml  Dioxus.toml  MainActivity.kt  README.md  index.html
examples/todomvc/src/: app.rs  lib.rs  main.rs  todomvc.css  wasm.rs
examples/wasm_7guis/: Cargo.toml  README.md  index.html
examples/wasm_7guis/src/: app.rs  lib.rs
examples/wasm_7guis/src/tasks/: cells.rs  circle_drawer.rs  counter.rs  crud.rs  temp_converter.rs  timer.rs
examples/wasm_hello/: Cargo.toml  README.md  index.html
examples/wasm_hello/src/: lib.rs
examples/wgpu_texture/: Cargo.toml
examples/wgpu_texture/src/: demo_renderer.rs  dioxus_native.rs  html.rs  main.rs
scripts/: setup-dev.sh
src/: application.rs  blitz.rs  dioxus.rs  dioxus_native.rs  events.rs  focus.rs  glaizer_integration.rs  layout.rs  lib.rs  mouse.rs  mutation.rs  node.rs  prevent_default.rs  render.rs  style.rs  style_impls.rs  style_traverser.rs  util.rs  viewport.rs  waker.rs  window.rs
tests/: README.md  align_content_block_test.html  bbc_dots_test.html  bbc_nav.html  box_model_test.html  calc_sizing_test.html  dioxus_footer.html  dioxus_leftnav.html  dioxus_leftnav_tw.html  dioxus_sidebar.html  dioxus_topnav.html  dioxuslabs.html  dioxuslabs_center.html  display_test.html  dots_test.html  flexbox_test.html  float_test.html  grid_height_debug.html  grid_in_flex_debug.html  grid_test.html  hfull_debug.html  inline_baseline_test.html  inline_block_heights_test.html  inline_span_test.html  intrinsic_size_matrix.html  kitchen_sink_test.html  line_box_expansion_test.html  line_height_debug.html  multiline_baseline_test.html  neg_margin_context.html  neg_margin_debug.html  neg_margin_t5_bisect.html  nested_inline_block_test.html  overflow_baseline_test.html  overflow_case6_debug.html  overflow_hidden_baseline_debug.html  overflow_test.html  renders_boxes.rs  replaced_baseline_test.html  sizing_test.html  (+9 more)
tests/blitz-net/: Cargo.toml
tests/blitz-net/tests/: concurrency.rs  features.rs  http_behavior.rs  schemes.rs
tests/blitz-net/tests/common/: mod.rs
wpt/runner/: Cargo.toml
wpt/runner/src/: main.rs  net_provider.rs  panic_backtrace.rs  report.rs
wpt/runner/src/test_runners/: attr_test.rs  mod.rs  ref_test.rs
(+21 files in other folders)
