[workspace]
members = [
  "packages/debug_timer",
  "packages/blitz-traits",
  "packages/blitz-dom",
  "packages/blitz-html",
  "packages/blitz-net",
  "packages/blitz-paint",
  "packages/blitz-shell",
  "packages/blitz",
  "packages/mini-dxn",
  "packages/stylo_taffy",
  "apps/readme",
  "apps/bump",
  "wpt/runner",
  "examples/counter",
  "examples/todomvc",
  "examples/wgpu_texture",
]
exclude = ["sites"]
resolver = "2"

[workspace.package]
version = "0.2.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dioxuslabs/blitz"
repository = "https://github.com/dioxuslabs/blitz"
categories = ["gui"]
edition = "2024"
rust-version = "1.86.0"

[workspace.dependencies]
# Blitz dependencies(in-repo)
blitz = { version = "0.2.0", path = "./packages/blitz" }
blitz-dom = { version = "0.2.0", path = "./packages/blitz-dom", default-features = false }
blitz-html = { version = "0.2.0", path = "./packages/blitz-html", default-features = false }
blitz-net = { version = "0.2.0", path = "./packages/blitz-net", default-features = false }
blitz-paint = { version = "0.2.0", path = "./packages/blitz-paint", default-features = false }
blitz-shell = { version = "0.2.0", path = "./packages/blitz-shell", default-features = false }
blitz-traits = { version = "0.2.0", path = "./packages/blitz-traits", default-features = false }
stylo_taffy = { version = "0.2.0", path = "./packages/stylo_taffy", default-features = false }
mini-dxn = { path = "./packages/mini-dxn", default-features = false }
debug_timer = { version = "0.1.2", path = "./packages/debug_timer" }

# Servo dependencies
style = { version = "0.8", package = "stylo" }
style_traits = { version = "0.8", package = "stylo_traits" }
style_atoms = { version = "0.8", package = "stylo_atoms" }
style_config = { version = "0.8", package = "stylo_config" }
style_dom = { version = "0.8", package = "stylo_dom" }
selectors = { version = "0.32", package = "selectors" }
cssparser = { version = "0.35" }

# HTML5ever dependencies
markup5ever = "0.35" # needs to match stylo web_atoms version
html5ever = "0.35" # needs to match stylo web_atoms version
xml5ever = "0.35" # needs to match stylo web_atoms version

# Other Servo dependencies
euclid = "0.22"
atomic_refcell = "0.1.13"
app_units = "0.7.5"
smallvec = "1"

# DioxusLabs dependencies
dioxus = { version = "=0.7.0-rc.1" }
dioxus-core = { version = "=0.7.0-rc.1" }
dioxus-html = { version = "=0.7.0-rc.1" }
dioxus-hooks = { version = "=0.7.0-rc.1" }
dioxus-cli-config = { version = "=0.7.0-rc.1" }
dioxus-devtools = { version = "=0.7.0-rc.1" }
taffy = { version = "0.9", default-features = false, features = ["std", "flexbox", "grid", "block_layout", "content_size", "calc"] }

# AnyRender
anyrender = { version = "0.6" }
anyrender_vello = { version = "0.6" }
anyrender_vello_cpu = { version = "0.7" }
anyrender_svg = { version = "0.6" }
wgpu_context = { version = "0.1" }

# Linebender + Fontations + WGPU + SVG
color = "0.3"
linebender_resource_handle = "0.1"
peniko = "0.5.0"
kurbo = "0.12"
parley = { version = "0.6.0", default-features = false, features = ["std"] }
skrifa = { version = "0.37", default-features = false, features = ["std"] } # Should match parley version
wgpu = "26"
softbuffer = "0.4"
pixels = "0.15"
vello = { version = "0.6", features = [ "wgpu" ] }
vello_encoding = { version = "0.6", default-features = false }
vello_cpu = { version = "0.0.3", default-features = false, features = ["std", "text"]}
usvg = "0.45.1"

# Windowing & Input
raw-window-handle = "0.6.0"
winit = { version = "0.30.2", features = ["rwh_06"] }
accesskit_winit = "0.23"
accesskit = "0.17"
arboard = { version = "3.4.1", default-features = false }
rfd = { version = "0.15.3", default-features = false }
keyboard-types = "0.7"
cursor-icon = "1"

# IO & Networking
url = "2.5.0"
http = "1.1.0"
data-url = "0.3.1"
tokio = "1.42"
reqwest = "0.12"

# Media & Decoding
image = { version = "=0.25.6", default-features = false }
woff = { version = "0.6", default-features = false }
woff2 = "0.3"
wuff = "0.2"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
png = "0.17"
serde = "1"

# Other dependencies
rustc-hash = "1.1.0"
bytes = "1.7.1"
slab = "0.4.9"
tracing = "0.1.40"
tracing-subscriber = "0.3"
futures-util = "0.3.30"
futures-intrusive = "0.5.0"
pollster = "0.4"
smol_str = "0.2"
bitflags = "2.8.0"
bytemuck = "1"
fastrand = "2.3.0"
rayon = "1"
thread_local = "1"

[profile.profile]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.p2]
inherits = "production"
opt-level = 2

[profile.small]
inherits = "production"
opt-level = "s"
panic = "abort"

[profile.small-panic]
inherits = "small"
panic = "unwind"

[profile.tiny]
inherits = "small"
opt-level = "z"

# This is a "virtual package"
# It is not meant to be published, but is used so "cargo run --example XYZ" works properly
[package]
name = "blitz-examples"
version = "0.0.1"
authors = ["Jonathan Kelley"]
edition = "2024"
description = "Top level crate for Blitz"
license = "MIT OR Apache-2.0"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.86.0"
publish = false

[dev-dependencies]
anyrender = { workspace = true }
anyrender_vello = { workspace = true }
anyrender_vello_cpu = { workspace = true, features = ["multithreading"] }
blitz-dom = { workspace = true, features = ["default"] }
blitz-html = { workspace = true }
blitz-traits = { workspace = true }
blitz-paint = { workspace = true }
blitz-shell = { workspace = true }
blitz-net = { workspace = true }
blitz = { workspace = true, features = ["net"] }
mini-dxn = { workspace = true, features = ["default"] }
dioxus = { workspace = true }
euclid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
image = { workspace = true }
png = { workspace = true }
env_logger = "0.11"
tracing-subscriber = "0.3"

# [patch.crates-io]
# [patch."https://github.com/dioxuslabs/taffy"]
# taffy = { path = "../taffy" }

# [patch."https://github.com/nicoburns/parley"]
# parley = { path = "../parley/parley" }
# fontique = { path = "../parley/fontique" }
