[workspace]
members = [
  "packages/debug_timer",
  "packages/blitz-traits",
  "packages/blitz-dom",
  "packages/blitz-html",
  "packages/blitz-net",
  "packages/blitz-paint",
  "packages/blitz-shell",
  "packages/blitz",
  "packages/stylo_taffy",
  "packages/dioxus-native",
  "packages/dioxus-native-dom",
  "apps/browser",
  "apps/readme",
  "apps/bump",
  "wpt/runner",
  "examples/counter",
  "examples/todomvc",
  "examples/wgpu_texture",
]
exclude = ["sites"]
resolver = "2"

[workspace.package]
version = "0.2.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dioxuslabs/blitz"
repository = "https://github.com/dioxuslabs/blitz"
categories = ["gui"]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# Blitz dependencies(in-repo)
blitz = { version = "0.2.0", path = "./packages/blitz" }
blitz-dom = { version = "0.2.0", path = "./packages/blitz-dom", default-features = false }
blitz-html = { version = "0.2.0", path = "./packages/blitz-html", default-features = false }
blitz-net = { version = "0.2.0", path = "./packages/blitz-net", default-features = false }
blitz-paint = { version = "0.2.0", path = "./packages/blitz-paint", default-features = false }
blitz-shell = { version = "0.2.0", path = "./packages/blitz-shell", default-features = false }
blitz-traits = { version = "0.2.0", path = "./packages/blitz-traits", default-features = false }
stylo_taffy = { version = "0.2.0", path = "./packages/stylo_taffy", default-features = false }
dioxus-native = { version = "0.7.0", path = "./packages/dioxus-native", default-features = false }
dioxus-native-dom = { version = "0.7.0", path = "./packages/dioxus-native-dom", default-features = false }
debug_timer = { version = "0.1.2", path = "./packages/debug_timer" }

# Servo dependencies
style = { version = "0.9.0", package = "stylo" }
style_traits = { version = "0.9.0", package = "stylo_traits" }
style_atoms = { version = "0.9.0", package = "stylo_atoms" }
style_config = { version = "0.9.0", package = "stylo_config" }
style_dom = { version = "0.9.0", package = "stylo_dom" }
selectors = { version = "0.33.0", package = "selectors" }
cssparser = { version = "0.36" }

# HTML5ever dependencies
markup5ever = "0.36.1" # needs to match stylo web_atoms version
html5ever = "0.36.1"   # needs to match stylo web_atoms version
xml5ever = "0.36.1"    # needs to match stylo web_atoms version

# Other Servo dependencies
euclid = "0.22"
atomic_refcell = "0.1.13"
app_units = "0.7.5"
smallvec = "1"

# DioxusLabs dependencies
dioxus = { version = "0.7" }
dioxus-core = { version = "0.7" }
dioxus-html = { version = "0.7" }
dioxus-hooks = { version = "0.7" }
dioxus-signals = { version = "0.7" }
dioxus-stores = { version = "0.7" }
dioxus-asset-resolver = { version = "0.7" }
manganis = { version = "0.7" }
dioxus-document = { version = "0.7" }
dioxus-history = { version = "0.7" }

# Dioxus hot reload
dioxus-devtools = { version = "0.7" }
dioxus-cli-config = { version = "0.7" }

# Dioxus Prelude
dioxus-core-macro = { version = "0.7" }

# Taffy
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "6712879d35c13ad316bbbed2c1e4092c270cb650", default-features = false, features = [
  "std",
  "flexbox",
  "grid",
  "block_layout",
  "content_size",
  "calc",
  "detailed_layout_info",
] }

# AnyRender
anyrender = { version = "0.6" }
anyrender_vello = { version = "0.6" }
anyrender_vello_cpu = { version = "0.8" }
anyrender_vello_hybrid = { version = "0.1" }
anyrender_skia = { version = "0.3.0" }
anyrender_svg = { version = "0.6" }
wgpu_context = { version = "0.1.2" }

# Linebender + Fontations + WGPU + SVG
color = "0.3"
linebender_resource_handle = "0.1"
peniko = "0.5.0"
kurbo = "0.12"
parley = { git = "https://github.com/linebender/parley", rev = "f6a8485c35367b581b03bd6da55c8465f24e16ef", default-features = false, features = [
  "std",
] }
skrifa = { version = "0.37", default-features = false, features = [
  "std",
] } # Should match parley version
wgpu = "26"
softbuffer = "0.4"
pixels = "0.15"
vello = { version = "0.6", features = ["wgpu"] }
vello_encoding = { version = "0.6", default-features = false }
vello_cpu = { version = "0.0.3", default-features = false, features = [
  "std",
  "text",
] }
usvg = "0.45.1"

# Windowing & Input
raw-window-handle = "0.6.0"
winit = { version = "0.30.2", features = ["rwh_06"] }
accesskit_winit = "0.23"
accesskit = "0.17"
arboard = { version = "3.4.1", default-features = false }
rfd = { version = "0.15.3", default-features = false }
keyboard-types = "0.7"
cursor-icon = "1"

# IO & Networking
url = "2.5.0"
http = "1.1.0"
data-url = "0.3.1"
tokio = "1.42"
reqwest = "0.12"
reqwest-middleware = { version = "0.4.2", default-features = false }
http-cache-reqwest = { version = "=1.0.0-alpha.2", default-features = false }

# Media & Decoding
image = { version = "=0.25.6", default-features = false }
woff = { version = "0.6", default-features = false }
woff2 = "0.3"
wuff = "0.2"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
png = "0.17"
serde = "1"

# Dioxus Native
webbrowser = "1.0"

# Other dependencies
rustc-hash = "1.1.0"
bytes = "1.7.1"
slab = "0.4.9"
tracing = "0.1.40"
tracing-subscriber = "0.3"
futures-util = "0.3.30"
futures-intrusive = "0.5.0"
pollster = "0.4"
smol_str = "0.2"
bitflags = "2.8.0"
bytemuck = "1"
fastrand = "2.3.0"
rayon = "1"
thread_local = "1"

[profile.profile]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.p2]
inherits = "production"
opt-level = 2

[profile.small]
inherits = "production"
opt-level = "s"
panic = "abort"

[profile.small-panic]
inherits = "small"
panic = "unwind"

[profile.tiny]
inherits = "small"
opt-level = "z"

# This is a "virtual package"
# It is not meant to be published, but is used so "cargo run --example XYZ" works properly
[package]
name = "blitz-examples"
version = "0.0.1"
authors = ["Jonathan Kelley"]
edition = "2024"
description = "Top level crate for Blitz"
license = "MIT OR Apache-2.0"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.86.0"
publish = false

[dev-dependencies]
anyrender = { workspace = true }
anyrender_vello = { workspace = true }
anyrender_vello_cpu = { workspace = true, features = ["multithreading"] }
anyrender_vello_hybrid = { workspace = true }
blitz-dom = { workspace = true, features = ["default"] }
blitz-html = { workspace = true }
blitz-traits = { workspace = true }
blitz-paint = { workspace = true }
blitz-shell = { workspace = true }
blitz-net = { workspace = true }
blitz = { workspace = true, features = ["net"] }
dioxus = { workspace = true }
dioxus-native = { workspace = true, features = ["vello", "floats", "svg"] }
euclid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
image = { workspace = true }
png = { workspace = true }
peniko = { workspace = true }
env_logger = "0.11"
tracing-subscriber = "0.3"

# [patch.crates-io]
# anyrender = { path = "../anyrender/crates/anyrender" }
# anyrender_skia = { path = "../anyrender/crates/anyrender_skia" }
# anyrender_vello = { path = "../anyrender/crates/anyrender_vello" }
# anyrender_vello_cpu = { path = "../anyrender/crates/anyrender_vello_cpu" }
# anyrender_svg = { path = "../anyrender/crates/anyrender_svg" }
# wgpu_context = { path = "../anyrender/crates/wgpu_context" }

# [patch.crates-io]
# [patch."https://github.com/dioxuslabs/taffy"]
# taffy = { path = "../taffy" }

# [patch."https://github.com/nicoburns/parley"]
# parley = { path = "../parley/parley" }
# fontique = { path = "../parley/fontique" }