[package]
name = "blitz-core"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>", "Evan Almloff"]
description = "Native WGPU based renderer for Dioxus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/blitz"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus/", features = ["layout-attributes"] }
dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus/" }
taffy = "0.3.12"
tokio = { version = "1.25.0", features = ["full"] }
lightningcss = "1.0.0-alpha.39"
cssparser = "0.29.6"
vello = { git = "https://github.com/linebender/vello", rev = "9d7c4f00d8db420337706771a37937e9025e089c" }
wgpu = "0.17"
tao = { version = "0.20.0", features = ["serde"] }
raw-window-handle = "0.5.0"
anymap = "0.12.1"
futures-util = "0.3.26"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
keyboard-types = "0.7.0"
rustc-hash = "1.1.0"
shipyard = {  version = "0.6.2", features = ["proc", "std"], default-features = false }
once_cell = "1.17.1"
image = "0.24.5"
quadtree_rs = "0.1.2"
smallvec = "1.10.0"
