[package]
name = "browser"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "blitz"
path = "src/main.rs"

[features]
default = ["vello", "floats", "incremental", "cookies", "cache", "screenshot", "capture"]
screenshot = ["dep:anyrender", "dep:anyrender_vello_cpu", "dep:blitz-paint", "dep:png", "dep:peniko", "dep:rfd"]
capture = ["dep:anyrender", "dep:anyrender_serialize", "dep:blitz-paint", "dep:png", "dep:peniko", "dep:rfd"]
vello = ["dioxus-native/vello"]
hybrid = ["dioxus-native/vello-hybrid"]
skia = ["dioxus-native/skia"]
cpu = ["cpu-pixels"]
cpu-pixels = ["dioxus-native/vello-cpu-pixels"]
cpu-softbuffer = ["dioxus-native/vello-cpu-softbuffer"]
incremental = ["dioxus-native/incremental"]
logtime = ["log_frame_times", "log_phase_times"]
log_frame_times = ["dioxus-native/log-frame-times"]
log_phase_times = ["dioxus-native/log-phase-times"]
floats = ["dioxus-native/floats"]
cache = ["blitz-net/cache"]
cookies = ["blitz-net/cookies"]
avif = ["image/avif"]
webp = ["image/webp"]
tracing = ["dioxus-native/tracing", "blitz-html/tracing", "blitz-net/tracing", "dep:tracing-subscriber"]
hot-reload = ["dioxus-native/hot-reload"]
accessibility = ["dioxus-native/accessibility"]
mimalloc = ["dep:mimalloc"]

[dependencies]
dioxus-native = { workspace = true, features = [
  "svg",
  "system-fonts",
  "net",
  "clipboard",
  "prelude",
  "hot-reload"
] }
blitz-traits = { workspace = true }
blitz-dom = { workspace = true, features = ["woff-rust", "parallel-construct"] }
blitz-net = { workspace = true, features = ["http2"] }
blitz-html = { workspace = true }
linebender_resource_handle = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
webbrowser = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
anyrender = { workspace = true, optional = true }
anyrender_serialize = { workspace = true, optional = true }
anyrender_vello_cpu = { workspace = true, optional = true }
blitz-paint = { workspace = true, optional = true }
png = { workspace = true, optional = true }
peniko = { workspace = true, optional = true }

# Allocators
mimalloc = { version = "0.1.48", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true, features = ["xdg-portal"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
