[package]
name = "readme"
version = "0.1.0"
edition = "2024"
license.workspace = true
rust-version.workspace = true

[features]
default = ["gpu", "comrak"]
gpu = ["dep:anyrender_vello"]
cpu = ["cpu-pixels"]
cpu-pixels = ["cpu-base", "anyrender_vello_cpu/pixels_window_renderer"]
cpu-softbuffer = ["cpu-base", "anyrender_vello_cpu/softbuffer_window_renderer"]
cpu-base = ["dep:anyrender_vello_cpu"]
avif = ["dep:image", "image?/avif-native"]
comrak = ["dep:comrak"]
pulldown_cmark = ["dep:pulldown-cmark"]
log_frame_times = ["anyrender_vello_cpu?/log_frame_times", "anyrender_vello?/log_frame_times"]
log_phase_times = ["blitz-dom/log_phase_times"]

[dependencies]
blitz-traits = { workspace = true }
blitz-dom = { workspace = true, features = ["default"] }
blitz-html = { workspace = true }
blitz-paint = { workspace = true, features = ["default"] }
blitz-net = { workspace = true, features = ["cookies"] }
blitz-shell = { workspace = true, features = ["tracing", "default"] }
anyrender_vello = { workspace = true, optional = true }
anyrender_vello_cpu = { workspace = true, optional = true }

tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
reqwest = { workspace = true }
url = { workspace = true }
winit = { workspace = true }
comrak = { version = "0.39", default-features = false, optional = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"], optional = true }
image = { workspace = true, default-features = false, optional = true }
notify = "8.0.0"
