[package]
name = "readme"
version = "0.1.0"
edition = "2024"
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["gpu", "comrak", "floats"]

# Renderers
gpu = ["dep:anyrender_vello"]
hybrid = ["dep:anyrender_vello_hybrid"]
skia = ["dep:anyrender_skia"]
skia-pixels = ["dep:anyrender_skia", "anyrender_skia/pixels_window_renderer"]
skia-softbuffer = ["dep:anyrender_skia", "anyrender_skia/softbuffer_window_renderer"]
cpu = ["cpu-pixels"]
cpu-pixels = ["cpu-base", "anyrender_vello_cpu/pixels_window_renderer"]
cpu-softbuffer = ["cpu-base", "anyrender_vello_cpu/softbuffer_window_renderer"]
cpu-base = ["dep:anyrender_vello_cpu"]

avif = ["dep:image", "image?/avif-native"]
comrak = ["dep:comrak"]
pulldown_cmark = ["dep:pulldown-cmark"]
floats = ["blitz-dom/floats"]
log_frame_times = [
  "anyrender_vello_cpu?/log_frame_times",
  "anyrender_vello_hybrid?/log_frame_times",
  "anyrender_vello?/log_frame_times",
  "anyrender_skia?/log_frame_times",
]
log_phase_times = ["blitz-dom/log_phase_times"]
incremental = ["blitz-dom/incremental"]

[dependencies]
blitz-traits = { workspace = true }
blitz-dom = { workspace = true, features = ["default", "parallel-construct"] }
blitz-html = { workspace = true }
blitz-paint = { workspace = true, features = ["default"] }
blitz-net = { workspace = true, features = ["cookies", "debug_log"] }
blitz-shell = { workspace = true, features = ["tracing", "default"] }
anyrender_vello = { workspace = true, optional = true }
anyrender_skia = { workspace = true, optional = true }
anyrender_vello_cpu = { workspace = true, features = ["multithreading"], optional = true }
anyrender_vello_hybrid = { workspace = true, optional = true }

tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
reqwest = { workspace = true }
url = { workspace = true }
winit = { workspace = true }
comrak = { version = "0.43", default-features = false, optional = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"], optional = true }
image = { workspace = true, default-features = false, optional = true }
notify = "8.0.0"