[package]
name = "readme"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
log_phase_times = ["blitz-dom/log_phase_times"]

[dependencies]
blitz-dom = { path = "../../packages/blitz-dom" }
blitz-net = { path = "../../packages/blitz-net" }
blitz-traits = { path = "../../packages/blitz-traits" }
blitz-html = { path = "../../packages/blitz-html" }
blitz-renderer-vello = { path = "../../packages/blitz-renderer-vello" }
blitz-shell = { path = "../../packages/blitz-shell", features = ["tracing"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
reqwest = { workspace = true }
url = { workspace = true }
winit = { workspace = true }
comrak = { version = "0.35", default-features = false }
notify = "8.0.0"