[package]
name = "wpt"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
blitz-dom = { path = "../../packages/blitz-dom" }
blitz-net = { path = "../../packages/blitz-net" }
blitz-traits = { path = "../../packages/blitz-traits" }
blitz-renderer-vello = { path = "../../packages/blitz-renderer-vello" }
dioxus-native = { path = "../../packages/dioxus-native", features = ["tracing"] }
tokio = { workspace = true }
png = { version = "0.17" }
glob = {version = "0.3.1"}
dify = {version = "0.7.4"}
image = {version = "0.25"}
env_logger = {version = "0.11.5"}
owo-colors = "4.1.0"
log = "0.4.22"
regex = "1.11.1"
axum = { version = "0.7.7", features = [] }
tower-http = {version = "0.6.1", features = ["fs"]}
tower = {version = "0.5.1"}
url = "2.5.3"
reqwest = "0.12.9"