[package]
name = "anyrender_example"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true }
anyrender = { path = "../../packages/anyrender" }
anyrender_vello = { path = "../../packages/anyrender_vello" }
anyrender_vello_cpu = { path = "../../packages/anyrender_vello_cpu" }

