[package]
name = "anyrender_bunnymark"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true }
image = { workspace = true, features = ["png"] }
anyrender = { path = "../../packages/anyrender" }
anyrender_vello = { path = "../../packages/anyrender_vello", features = ["log_frame_times"] }
anyrender_vello_cpu = { path = "../../packages/anyrender_vello_cpu", features = ["pixels_window_renderer", "multithreading", "log_frame_times"] }
fastrand = "2.3"
