[package]
name = "counter"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["system_fonts", "gpu"]
system_fonts = ["blitz-dom/system_fonts"]
gpu = ["mini-dxn/gpu"]
cpu = ["mini-dxn/cpu"]

[dependencies]
mini-dxn = { path = "../../packages/mini-dxn", default-features = false }
dioxus = { version = "=0.7.0-alpha.1", default-features = false, features = ["html", "hooks", "macro", "signals"] }

# Control whether system font support is enabled
blitz-dom = { path = "../../packages/blitz-dom", default-features = false }

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"