[package]
name = "counter"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["system_fonts", "gpu"]
system_fonts = ["blitz-dom/system_fonts"]
gpu = ["mini-dxn/gpu"]
cpu = ["cpu-pixels"]
svg = ["blitz-paint/svg"]
cpu-pixels = ["mini-dxn/cpu-pixels"]
cpu-softbuffer = ["mini-dxn/cpu-softbuffer"]
incremental = ["mini-dxn/incremental"]
log_frame_times = ["mini-dxn/log_frame_times"]
log_phase_times = ["mini-dxn/log_phase_times"]

[dependencies]
mini-dxn = { path = "../../packages/mini-dxn", default-features = false }
dioxus = { version = "=0.7.0-rc.0", default-features = false, features = ["html", "hooks", "macro", "signals"] }

# Control whether system font support is enabled
blitz-dom = { workspace = true, default-features = false }
blitz-paint = { workspace = true, default-features = false }

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"