[package]
name = "seven_guis"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "seven_guis_native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["vello"]
vello = ["dioxus-native/vello"]
hybrid = ["dioxus-native/vello-hybrid"]
skia = ["dioxus-native/skia"]

[dependencies]
dioxus-native = { workspace = true, features = ["prelude"] }
futures-timer = "3"

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native: pull in system fonts (wasm bundles DejaVu instead).
dioxus-native = { workspace = true, features = ["system-fonts"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-only: additive wasm-bindgen feature on futures-timer
futures-timer = { version = "3", features = ["wasm-bindgen"] }
anyrender_vello_hybrid = { workspace = true, features = ["webgl"] }
dioxus-native = { workspace = true, features = ["woff"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
