[package]
name = "todomvc"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["gpu"]
gpu = ["mini-dxn/gpu"]
hybrid = ["mini-dxn/hybrid"]
skia = ["mini-dxn/skia"]
cpu = ["cpu-pixels"]
cpu-pixels = ["mini-dxn/cpu-pixels"]
cpu-softbuffer = ["mini-dxn/cpu-softbuffer"]
incremental = ["mini-dxn/incremental"]
log_frame_times = ["mini-dxn/log_frame_times"]
log_phase_times = ["mini-dxn/log_phase_times"]
tracing = ["mini-dxn/tracing", "dep:tracing-subscriber"]

[dependencies]
mini-dxn = { path = "../../packages/mini-dxn", default-features = false, features = ["data-uri", "svg", "system_fonts"] }
dioxus = { version = "0.7", default-features = false, features = ["html", "hooks", "macro", "signals"] }
tracing-subscriber = { workspace = true, optional = true}

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"