[package]
name = "todomvc"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["vello"]
vello = ["dioxus-native/vello"]
hybrid = ["dioxus-native/vello-hybrid"]
skia = ["dioxus-native/skia"]
cpu = ["cpu-pixels"]
cpu-pixels = ["dioxus-native/vello-cpu-pixels"]
cpu-softbuffer = ["dioxus-native/vello-cpu-softbuffer"]
incremental = ["dioxus-native/incremental"]
logtime = ["log_frame_times", "log_phase_times"]
log_frame_times = ["dioxus-native/log-frame-times"]
log_phase_times = ["dioxus-native/log-phase-times"]
floats = ["dioxus-native/floats"]
tracing = ["dioxus-native/tracing", "dep:tracing-subscriber"]
hot-reload = ["dioxus-native/hot-reload"]

[dependencies]
dioxus-native = { workspace = true, features = ["svg", "system-fonts", "data-uri", "prelude"] }
tracing-subscriber = { workspace = true, optional = true}

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }